<resources>
    <string name="app_name">Collaboration App</string>
    <string name="button_add_card">Add TODO</string>
    <string name="button_remove_card">Remove TODO</string>
    <string name="hint_text">Write your todo here …</string>
    <string name="button_store_state">Store State</string>
    <string name="button_recover_state">Restore Last Stored State</string>
    <string name="button_create_group">Create New Group</string>
    <string name="group_id_hint">Group id</string>
    <string name="group_name_hint">Group name</string>
    <string name="button_send_self_message">Send Test Message to Group</string>
    <string name="create_group_instruction">Create a new collaboration group here:</string>
    <string name="button_send_server_message">Send test message to server</string>
    <string name="button_next_page">Next Page</string>
    <string name="sign_in_to_account_request">Please sign into your Google Account</string>
    <string name="hint_peer_email">friend@google.com</string>
    <string name="text_peer_email">Enter the email of someone you would like to add to your group:</string>
    <string name="text_join_existing_group">Or continue on any existing group shown below:</string>
    <string name="button_existing_group">Edit on Existing Group</string>
    <string name="error_join_group_with_none_selected">Please select an existing group or create a new one.</string>
    <string name="error_join_unregistered_group">Group is not registered. Please select another group.</string>
    <string name="empty_name">NO NAME</string>
    <string name="hint_new_group">New Group Name</string>
    <string name="text_no_friends">This list hasn\'t been shared with anyone yet.</string>
    <string name="button_back">Back</string>
    <string name="button_leave">Leave Group</string>
    <string name="button_create_doc">Init Document (debug)</string>
</resources>
